--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         TEST??  
 
     	</nav>
-    	<footer>This is a footer</footer>
+    	<footer>This is a footer Hej med dig? </footer>
     </body>
 </html>
