added text and buttons on backgroundpicture

--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
                     <ul>
                         <li><a href="#">Om mig</a></li>
                         <li><a href="#">Portefølje</a></li>
-                        <li><a href="#">Kontact</a></li>
+                        <li><a href="#">Kontakt</a></li>
                     </ul>
                 </nav>
             </header>
 
-
             <main class="welcomepicture">
-                blablablablabala 
-
+                <h1>Bea Lim Petersen</h1>
+                Velkommen til mit digitale skrivebord! 
+                    <ul>
+                        <li><a href="#">Om mig</a></li>
+                        <li><a href="#">Portefølje</a></li>
+                        <li><a href="#">Kontakt</a></li>
+                    </ul>
             </main>
 
             <section class="img-me">
