Added some text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             </section>
 
             <section class="about">
-                Blablabla
+               <h1>Bea Lim Petersen</h1>
+               <h3>Multimediedesign studerende</h3>
+               Hejsa, 
+               Mit navn er Bea og jeg Lim Petersen. Jeg er b... 
             </section>
    
             <footer>
