added portfolio site

--- a/index.html
+++ b/index.html
@@ -33,25 +33,34 @@
             </main>
 
             <section class="img-me">
-                <img class="mig">
+                <img class="logo-me" src="mig1.jpg" alt="Bea Lim Petersen" width="500px">
             </section>
 
             <section class="about">
                 <h1>Bea Lim Petersen</h1>
                 <h3>Multimediedesign studerende</h3>
                 Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
-
+                <br>
                 Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Det har været spændende at være socialrådgiver, men jeg har igennem længere tid villet noget andet.
                 Derfor var det en glædelig nyhed, da uddannelses loftet frafaldt og jeg havde muligheden for at tage en ny uddannelse, i en anden retning.
-
+                <br>
                 Jeg har igennem mine fritidsinteresser udviklet gode IT-kompetencer, hvor jeg bl.a. tidligere har haft leget med HTML koder og udviklingen af profiltekster. (Dette er dog længere tid siden – men fandt det dengang sjovt).
                 Endvidere vil jeg betegne mig selv som kreativ, samt at jeg har en stor interesse og flair for IT, teknologi, digitale og sociale medier – jeg finder det spændende, at kunne arbejde med udvikling og implementering af brugeroplevelser, digitalt design og programmering. Hvorfor at jeg tænkte, at dette ville være den rette uddannelse for mig.
-
+                <br>
                 Jeg påbegyndte uddannelsen den 1. september 2020, hvilket har været det helt rigtige valg for mig.
-
+                <br>
                 I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien eller venner.
                 Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
             </section>
+
+            <section class="kompetencer">
+                Hej 
+            </section>
+
+            <section class="portfolio">
+                HEj 
+            </section>
+
    
             <footer>
                 This is a footer ?
