addet portfolio, kompetencer and contact

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
             </header>
 
             <main class="welcomepicture">
-                <h1>Bea Lim Petersen</h1>
-                Velkommen til mit digitale skrivebord! 
-                    <ul>
-                        <li><a href="#">Om mig</a></li>
-                        <li><a href="#">Portefølje</a></li>
-                        <li><a href="#">Kontakt</a></li>
-                    </ul>
+                <div class="welcometext">
+                    <h1>Bea Lim Petersen</h1>
+                    Velkommen til mit digitale skrivebord! 
+                    <br>
+                        <ul>
+                            <li><a href="#">Om mig</a></li>
+                            <li><a href="#">Portefølje</a></li>
+                            <li><a href="#">Kontakt</a></li>
+                        </ul>
+                </div>
             </main>
 
             <section class="img-me">
@@ -54,17 +57,52 @@
             </section>
 
             <section class="kompetencer">
-                Hej 
+                <div class="pinkbox">
+                    <h1>Mine kompetencer</h1>
+                        <div class="icons">
+                            <img src="icon-pen.png" width="150px" height="150px">
+                            <img src="icon-lightbulb.png" width="150px" height="150px">
+                            <img src="icon-photo.png" width="150px" height="150px">
+                            <p>jsadfadfif</p>
+                            <p>fhsidfisdfj</p>
+                            <p>gdsfh</p>
+                        </div>
+                </div>
             </section>
 
             <section class="portfolio">
-                HEj 
+                <h1>Portefølje</h1>
+                    <div class="gallery">
+                        <img src="icon-pen.png" width="150px" height="150px">
+                        <img src="icon-lightbulb.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="hund.jpg" width="150px" height="150px">
+                        <img src="icon-pen.png" width="150px" height="150px">
+                        <img src="icon-lightbulb.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="hund.jpg" width="150px" height="150px">
+                        <img src="icon-pen.png" width="150px" height="150px">
+                        <img src="icon-lightbulb.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="icon-photo.png" width="150px" height="150px">
+                        <img src="hund.jpg" width="150px" height="150px">
+                    </div>
             </section>
 
    
             <footer>
-                This is a footer ?
-                Hej med dig?  TESTER? Hej 
+                <h1>Kontaktoplysninger</h1> 
+                <h2>Tak for besøget!</h2>
+
+                Bea Lim Petersen 
+                <br>    
+                Mail: Bealimpetersen@hotmail.com
+                <br>
+                tlf.: +45 31 35 35 57
+
+
             </footer> 
         </div>
     
