--- a/portfolio.html
+++ b/portfolio.html
@@ -8,24 +8,27 @@
     </head>
 
     <body>
-    	<div class="picture-grid">
-    		<div class="gridbox"><img src="hund.jpg width="200"></div>
-    		<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-			<div class="gridbox"><img src="hund.jpg" /></div>
-		</div>
+    	<section class="portfolio-page">
+    		<h1>Porteføjle</h1>
+    			<div class="gallery">
+    				<img src="icon-pen.png" width="150px" height="150px">
+		            <img src="icon-lightbulb.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-pen.png" width="150px" height="150px">
+		            <img src="icon-lightbulb.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-pen.png" width="150px" height="150px">
+		            <img src="icon-lightbulb.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+		            <img src="icon-photo.png" width="150px" height="150px">
+        		</div>
+		</section>
+
 
     </body>
     </html>
-<a href="#"><img src="logo.png"></a>
