--- a/index.html
+++ b/index.html
@@ -36,24 +36,25 @@
             </main>
 
             <section class="img-me">
+                <
                 <img class="logo-me" src="mig1.jpg" alt="Bea Lim Petersen" width="500px">
             </section>
 
             <section class="about">
                 <h1>Bea Lim Petersen</h1>
                 <h3>Multimediedesign studerende</h3>
-                Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
-                <br>
-                Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Det har været spændende at være socialrådgiver, men jeg har igennem længere tid villet noget andet.
-                Derfor var det en glædelig nyhed, da uddannelses loftet frafaldt og jeg havde muligheden for at tage en ny uddannelse, i en anden retning.
-                <br>
-                Jeg har igennem mine fritidsinteresser udviklet gode IT-kompetencer, hvor jeg bl.a. tidligere har haft leget med HTML koder og udviklingen af profiltekster. (Dette er dog længere tid siden – men fandt det dengang sjovt).
-                Endvidere vil jeg betegne mig selv som kreativ, samt at jeg har en stor interesse og flair for IT, teknologi, digitale og sociale medier – jeg finder det spændende, at kunne arbejde med udvikling og implementering af brugeroplevelser, digitalt design og programmering. Hvorfor at jeg tænkte, at dette ville være den rette uddannelse for mig.
-                <br>
-                Jeg påbegyndte uddannelsen den 1. september 2020, hvilket har været det helt rigtige valg for mig.
-                <br>
-                I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien eller venner.
-                Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
+                    <p>Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
+                    <br>
+                    <br>
+                    Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Men har længe gerne ville arbejde med mine kreative kompetencer. 
+                    <br>
+                    <br>
+                    Jeg er en positiv, nysgerrig og imødekommende person, som er klar på nye opgaver og ikke er bange for nye udfordinger. Jeg er lærenem og vil altid et ønske om at udvide min horisont indenfor et nyt emne, hvor jeg kan dygtiggøre mig og få mere erfaring. 
+                    <br>
+                    <br>
+                    I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien og vennerne.
+                    Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
+                    </p>
             </section>
 
             <section class="kompetencer">
@@ -63,9 +64,21 @@
                             <img src="icon-pen.png" width="150px" height="150px">
                             <img src="icon-lightbulb.png" width="150px" height="150px">
                             <img src="icon-photo.png" width="150px" height="150px">
-                            <p>jsadfadfif</p>
-                            <p>fhsidfisdfj</p>
-                            <p>gdsfh</p>
+                            <p>
+                                Har en stor passion for grafisk design, både digitalt og til print. 
+                            <br>
+                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                            </p>
+                            <p>
+                                Har en stor passion for grafisk design, både digitalt og til print. 
+                            <br>
+                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                            </p>
+                            <p>
+                                Et billede siger mere end 1000 ord - 
+                                <br>Jeg er vild med at tage billeder og video, og skabe en historie, blot ved brug af et kamera. 
+                                <br>Jeg anvender selv xx. 
+                            </p>
                         </div>
                 </div>
             </section>
@@ -95,13 +108,28 @@
             <footer>
                 <h1>Kontaktoplysninger</h1> 
                 <h2>Tak for besøget!</h2>
+                    <div class="oplysninger">
+                            <p class="kontaktoplysninger">
+                            <b>Kontaktoplysninger:</b>
+                            <br>
+                            Bea Lim Petersen 
+                            <br>    
+                            Mail: Bealimpetersen@hotmail.com
+                            <br>
+                            tlf.: +45 31 35 35 57
+                            </p>
+                            <p class="socialmedia">
+                            <b>Sociale medier:</b>
+                            <br>
+                            Instagram: 
+                            <br>
+                            Facebook: 
+                            <br>
+                            </p>
+                    </div>
 
-                Bea Lim Petersen 
-                <br>    
-                Mail: Bealimpetersen@hotmail.com
-                <br>
-                tlf.: +45 31 35 35 57
 
+           
 
             </footer> 
         </div>
