--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="#"><img src="logo.png"></a>
+                    <a href="index.html"><img src="logo.png"></a>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Om mig</a></li>
-                        <li><a href="#">Portefølje</a></li>
-                        <li><a href="#">Kontakt</a></li>
+                        <li><a href="index.html">Om mig</a></li>
+                        <li><a href="portfolio.html">Portefølje</a></li>
                     </ul>
                 </nav>
             </header>
@@ -28,9 +27,8 @@
                     Velkommen til mit digitale skrivebord! 
                     <br>
                         <ul>
-                            <li><a href="#">Om mig</a></li>
-                            <li><a href="#">Portefølje</a></li>
-                            <li><a href="#">Kontakt</a></li>
+                            <li><a href="index.html">Om mig</a></li>
+                            <li><a href="portfolio.html">Portefølje</a></li>
                         </ul>
                 </div>
             </main>
@@ -89,21 +87,21 @@
             <section class="portfolio">
                 <h1>Portefølje</h1>
                     <div class="gallery">
-                        <img src="icon-pen.png" width="150px" height="150px">
-                        <img src="icon-lightbulb.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="hund.jpg" width="150px" height="150px">
-                        <img src="icon-pen.png" width="150px" height="150px">
-                        <img src="icon-lightbulb.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="hund.jpg" width="150px" height="150px">
-                        <img src="icon-pen.png" width="150px" height="150px">
-                        <img src="icon-lightbulb.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="icon-photo.png" width="150px" height="150px">
-                        <img src="hund.jpg" width="150px" height="150px">
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="pentoolopg.jpg" width="200px" height="200px"></a>
+                    <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                    <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
                     </div>
             </section>
 
