--- a/portfolio.html
+++ b/portfolio.html
@@ -8,24 +8,36 @@
     </head>
 
     <body>
+            <header>
+                <div class="logo">
+                    <a href="index.html"><img src="logo.png"></a>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Om mig</a></li>
+                        <li><a href="portfolio.html">Portefølje</a></li>
+                    </ul>
+                </nav>
+            </header>
+    	
     	<section class="portfolio-page">
     		<h1>Porteføjle</h1>
     			<div class="gallery">
-    				<img src="icon-pen.png" width="150px" height="150px">
-		            <img src="icon-lightbulb.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-pen.png" width="150px" height="150px">
-		            <img src="icon-lightbulb.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-pen.png" width="150px" height="150px">
-		            <img src="icon-lightbulb.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
-		            <img src="icon-photo.png" width="150px" height="150px">
+    				<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="pentoolopg.jpg" width="200px" height="200px"></a>
+		            <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
+		            <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
         		</div>
 		</section>
 
