added links, photos and a pink box

--- a/index.html
+++ b/index.html
@@ -39,23 +39,25 @@
             </section>
 
             <section class="about">
-                <h1>Bea Lim Petersen</h1>
-                <hr/>
-                <h2>Multimediedesign studerende</h2>
-                    <p>Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
-                    <br>
-                    <br>
-                    Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Men har længe gerne ville arbejde med mine kreative kompetencer. 
-                    <br>
-                    <br>
-                    Jeg er en positiv, nysgerrig og imødekommende person, som er klar på nye opgaver og ikke er bange for nye udfordinger. Jeg er fyldt med energi og nyder derfor at have flere bolde i luften samtidig. 
-                    Jeg er lærenem og vil altid et ønske om at udvide min horisont indenfor et nyt emne, hvor jeg kan dygtiggøre mig og få mere erfaring. 
-                    Jeg har gennem min uddannelse tillært mig gode kompetencer inden for bl.a. design, kommunikation og interaktion.
-                    <br>
-                    <br>
-                    I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien og vennerne.
-                    Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
-                    </p>
+                <div class="pinkbox2">
+                    <h1>Bea Lim Petersen</h1>
+                    <hr/>
+                    <h2>Multimediedesign studerende</h2>
+                        <p>Hejsa, mit navn er Bea Lim Petersen, jeg er 31 år og bosat i hus i Odense N, (Næsby). Her bor jeg sammen med min kæreste og vores franske Bulldog Møffe.
+                        <br>
+                        <br>
+                        Jeg er netop startet på Multimediedesigner uddannelsen, og har forinden igennem 3 år, arbejdet som børne- og unge socialrådgiver i Odense. Men har længe gerne ville arbejde med mine kreative kompetencer. 
+                        <br>
+                        <br>
+                        Jeg er en positiv, nysgerrig og imødekommende person, som er klar på nye opgaver og ikke er bange for nye udfordinger. Jeg er fyldt med energi og nyder derfor at have flere bolde i luften samtidig. 
+                        Jeg er lærenem og vil altid et ønske om at udvide min horisont indenfor et nyt emne, hvor jeg kan dygtiggøre mig og få mere erfaring. 
+                        Jeg har gennem min uddannelse tillært mig gode kompetencer inden for bl.a. design, kommunikation og interaktion.
+                        <br>
+                        <br>
+                        I fritiden træner jeg i Repeat fitness og er netop startet på introhold til tennis. Endvidere bruger jeg gerne meget tid sammen med familien og vennerne.
+                        Jeg er utrolig glad for at rejse, og tager gerne på fjerne rejser, når det er muligt.
+                        </p>
+                </div>        
             </section>
 
             <section class="kompetencer">
@@ -107,27 +109,29 @@
 
    
             <footer>
-                <h1>Kontaktoplysninger</h1> 
-                <h2>Tak for besøget!</h2>
-                    <div class="oplysninger">
-                            <p class="kontaktoplysninger">
-                            <b>Kontaktoplysninger:</b>
-                            <br>
-                            Bea Lim Petersen 
-                            <br>    
-                            Mail: Bealimpetersen@hotmail.com
-                            <br>
-                            tlf.: +45 31 35 35 57
-                            </p>
-                            <p class="socialmedia">
-                            <b>Sociale medier:</b>
-                            <br>
-                            Instagram: 
-                            <br>
-                            Facebook: 
-                            <br>
-                            </p>
-                    </div>
+                <div class="pinkbox1">
+                    <h1>Kontaktoplysninger</h1> 
+                    <h2>Tak for besøget!</h2>
+                        <div class="oplysninger">
+                                <p class="kontaktoplysninger">
+                                <b>Kontaktoplysninger:</b>
+                                <br>
+                                Bea Lim Petersen 
+                                <br>    
+                                Mail: Bealimpetersen@hotmail.com
+                                <br>
+                                tlf.: +45 31 35 35 57
+                                </p>
+                                <p class="socialmedia">
+                                <b>Sociale medier:</b>
+                                <br>
+                                Instagram: 
+                                <br>
+                                Facebook: 
+                                <br>
+                                </p>
+                        </div>
+                </div>
 
 
            
