--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,16 @@
     		<h1>Porteføjle</h1>
     			<div class="gallery">
     				<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="pentoolopg.jpg" width="200px" height="200px"></a>
-		            <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
-		            <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		            <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="frog.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="movingart.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="krabbe.jpg" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="reklamevand.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="monthy.jpg" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
