--- a/portfolio.html
+++ b/portfolio.html
@@ -8,17 +8,17 @@
     </head>
 
     <body>
-            <header>
-                <div class="logo">
-                    <a href="index.html"><img src="logo.png"></a>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Om mig</a></li>
-                        <li><a href="portfolio.html">Portefølje</a></li>
-                    </ul>
-                </nav>
-            </header>
+        <header>
+            <div class="logo">
+                <a href="index.html"><img src="logo.png"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Om mig</a></li>
+                    <li><a href="portfolio.html">Portefølje</a></li>
+                </ul>
+            </nav>
+        </header>
     	
     	<section class="portfolio-page">
     		<h1>Porteføjle</h1>
@@ -27,7 +27,7 @@
 		            <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="frog.jpg" width="200px" height="200px"></a>
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="movingart.jpg" width="200px" height="200px"></a>
 		       		<a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="krabbe.jpg" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="stopmotion.jpg" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
@@ -40,6 +40,32 @@
 		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
         		</div>
 		</section>
+
+		<footer>
+            <div class="pinkbox1">
+                <h1>Kontaktoplysninger</h1> 
+                <h2>Tak for besøget!</h2>
+                    <div class="oplysninger">
+                        <p class="kontaktoplysninger">
+                        <b>Kontaktoplysninger:</b>
+                        <br>
+                        Bea Lim Petersen 
+                        <br>    
+                        Mail: Bealimpetersen@hotmail.com
+                        <br>
+                        tlf.: +45 31 35 35 57
+                        </p>
+                        <p class="socialmedia">
+                        <b>Sociale medier:</b>
+                        <br>
+                        Instagram: 
+                        <br>
+                        Facebook: 
+                        <br>
+                        </p>
+                    </div>
+            </div>
+        </footer>
 
 
     </body>
