editing in mobil version

--- a/new.html
+++ b/new.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="index.html"><img src="logo.png"></a>
+                <a href="index.html"><img src="logo.png" alt="logo-bea"></a>
             </div>
             <nav>
                 <ul>
@@ -31,10 +31,10 @@
                         </ul>
                 </div>
             </main>
-
-            <section class="img-me">
-                
-            </section>
+            <div class="wrapper">
+                <section class="img-me">
+                    <img class="logo-me" src="mig1.jpg" alt="Bea Lim Petersen">
+                </section>
 
             <section class="about">
                 <div class="pinkbox2">
@@ -63,22 +63,24 @@
                     <h1>Mine kompetencer</h1>
                         <div class="icons">
                             <img src="icon-pen.png" width="150px" height="150px">
+                            <p>
+                                Har en stor passion for grafisk design, både digitalt og til print. 
+                            <br>
+                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                            </p>
                             <img src="icon-lightbulb.png" width="150px" height="150px">
+                            <p>
+                                Har en stor passion for grafisk design, både digitalt og til print. 
+                            <br>
+                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
+                            </p>
                             <img src="icon-photo.png" width="150px" height="150px">
                             <p>
-                                Har en stor passion for grafisk design, både digitalt og til print. 
-                            <br>
-                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
-                            </p>
-                            <p>
-                                Har en stor passion for grafisk design, både digitalt og til print. 
-                            <br>
-                                Jeg har stor erfaring indenfor Illustrator, Indesign, Photoshop. 
-                            </p>
-                            <p>
                                 Et billede siger mere end 1000 ord - 
-                                <br>Jeg er vild med at tage billeder og video, og skabe en historie, blot ved brug af et kamera. 
-                                <br>Jeg anvender selv xx. 
+                            <br>
+                            Jeg er vild med at tage billeder og video, og skabe en historie, blot ved brug af et kamera. 
+                            <br>
+                            Jeg anvender selv xx. 
                             </p>
                         </div>
                 </div>
@@ -131,7 +133,7 @@
                         </div>
                 </div>
             </footer> 
-        </div>
+            </div>
     
     </body>
 </html>
