--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beas præstationsportfølje</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="new.css" >
+        <link rel="stylesheet" type="text/css" href="style.css" >
     </head>
 
     <body>
