--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beas præstationsportfølje</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="CSS/style.css" >
     </head>
 
     <body>
         <header>
             <div class="logo">
-                <a href="index.html"><img class="logo-bea" src="logo.png" alt="logo-bea"></a>
+                <a href="index.html"><img class="logo-bea" src="IMG/logo.png" alt="logo-bea"></a>
             </div>
             <nav>
                 <ul>
@@ -34,7 +34,7 @@
             
             <div class="wrapper">
                 <section class="img-me">
-                    <img class="logo-me" src="mig1.jpg" alt="Bea Lim Petersen">
+                    <img class="logo-me" src="IMG/mig1.jpg" alt="Bea Lim Petersen">
                 </section>
 
                 <section class="about">
@@ -64,7 +64,7 @@
                         <h1>Mine kompetencer</h1>
                             <div class="icons">
                                 <div class="icon__container">
-                                    <img src="icon-pen.png" width="150px" height="150px">
+                                    <img src="IMG/icon-pen.png" width="150px" height="150px">
                                     <p>
                                         Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -72,7 +72,7 @@
                                     </p>
                                 </div>
                                 <div class="icon__container">
-                                    <img src="icon-lightbulb.png" width="150px" height="150px">
+                                    <img src="IMG/icon-lightbulb.png" width="150px" height="150px">
                                     <p>
                                     Har en stor passion for grafisk design, både digitalt og til print. 
                                     <br>
@@ -80,7 +80,7 @@
                                     </p>
                                 </div>
                                  <div class="icon__container">
-                                    <img src="icon-photo.png" width="150px" height="150px">
+                                    <img src="IMG/icon-photo.png" width="150px" height="150px">
                                     <p>
                                         Et billede siger mere end 1000 ord - 
                                     <br>
@@ -97,21 +97,21 @@
             <section class="portfolio">
                 <h1>Portefølje</h1>
                     <div class="gallery">
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="pentoolopg.jpg" width="200px" height="200px"></a>
-                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-                        <a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" width="200px" height="200px"></a>
+                        <a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+                        <a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
                     </div>
             </section>
 
