--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beas præstationsportfølje</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="CSS/style.css" >
     </head>
 
     <body>
         <header>
             <div class="logo">
-                <a href="index.html"><img src="logo.png"></a>
+                <a href="index.html"><img src="IMG/logo.png"></a>
             </div>
             <nav>
                 <ul>
@@ -23,21 +23,21 @@
     	<section class="portfolio-page">
     		<h1>Porteføjle</h1>
     			<div class="gallery">
-    				<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="pentoolopg.jpg" width="200px" height="200px"></a>
-		            <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="frog.jpg" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="movingart.jpg" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="krabbe.jpg" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="stopmotion.jpg" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="Rune.jpg" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="reklamevand.jpg" width="200px" height="200px"></a>
-		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="monthy.jpg" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
-		       		<a href="#"><img src="icon-photo.png" width="200px" height="200px"></a>
+    				<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/pentoolopg.jpg" width="200px" height="200px"></a>
+		            <a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/frog.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/movingart.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=398"><img src="IMG/krabbe.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=66"><img src="IMG/stopmotion.jpg" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="500px" height="500px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=402"><img src="IMG/Rune.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=530&preview_id=530&preview_nonce=e840238d1a&preview=true"><img src="IMG/reklamevand.jpg" width="200px" height="200px"></a>
+		       		<a href="http://bealimpetersen.dk/blog/?page_id=174"><img src="IMG/monthy.jpg" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
+		       		<a href="#"><img src="IMG/icon-photo.png" width="200px" height="200px"></a>
         		</div>
 		</section>
 
